# collab-process

./: .gitignore  CMakeLists.txt  DESIGN_CHANGES.md  HANDOFF.md  MAC_INSTRUCTIONS.md  README.md  conpty_repro.cpp  echocon_exact.cpp  proposal.md  proposal_2.md  signal-routing.md  xmake.lua
.github/workflows/: ci.yml  main.yml  main_branch.yml  nightly.yml  notify-failures.yml  pull_request.yml
cmake/: collab-process-config.cmake.in
docs/proposals/: stop-redesign.md
include/collab/: process.hpp
include/collab/process/: command.hpp  command_config.hpp  compat.hpp  mode_error.hpp  process.hpp  process_ref.hpp  result.hpp  running_process.hpp  util.hpp  version.hpp
smoke/: CMakeLists.txt  tests.cpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
src/: env_block.cpp  env_block.hpp  find_executable.cpp  platform.hpp  process_ref.cpp  result.cpp  run.cpp  running_process.cpp  running_process_impl.hpp  write_temp_file.cpp
src/unix/: pe_check.cpp  spawn.cpp
src/win32/: console.cpp  pe_check.cpp  spawn.cpp  spawn_conpty.cpp
tests/: lifecycle_harness.cpp  no_console_harness.cpp  test_command.cpp  test_dotenv.cpp  test_helper.cpp  test_interrupt.cpp  test_io_callbacks.cpp  test_lifecycle.cpp  test_process_ref.cpp  test_run.cpp  test_run_env.cpp  test_run_misc.cpp  test_run_stdin.cpp  test_session.cpp  test_signals.cpp  test_spawn.cpp  test_spawn_errors.cpp  test_stdin_pipe.cpp  test_utilities.cpp  xmake.lua
tests/fixtures/: test_helper.bat  test_helper.cmd
